--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -32,6 +32,7 @@
 						<li><a href="{{ path('statistique') }}">Statistiques</a></li>
 						<li><a href="{{ path('admin') }}">Administration</a></li>
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
+						<li><a href="{{ path('trombinoscope.perso') }}">Selection</a></li>
 						<li><a href="{{ path('admin.rappels') }}">rappels</a></li>
 						<li><a href="{{ path('rules.admin') }}">Règles</a></li>
 						<li><a href="{{ path('personnage.admin.fiche') }}">Fiches</a></li>
