--- a/src/LarpManager/Views/admin/territoire/detail.twig
+++ b/src/LarpManager/Views/admin/territoire/detail.twig
@@ -112,9 +112,13 @@
     					<ul>
     						<li><strong>Importations : </strong>{% if territoire.importations|length > 0 %}{{ territoire.importations|join(', ') }}{% else %}Rien{% endif %}</li>
     						<li><strong>Exportations : </strong>{% if territoire.exportations|length > 0 %}{{ territoire.exportations|join(', ') }}{% else %}Rien{% endif %}</li>
+    						<li><strong>Ingrédients : </strong>{% if territoire.ingredients|length > 0 %}{{ territoire.ingredients|join(', ') }}{% else %}Rien{% endif %}</li>
+    						<li><a href="{{ path('territoire.ingredients.update', {'territoire': territoire.id}) }}">Modifier la liste des ingredients</a></li>
     					</ul>
     				</p>
     			</div>
+    			
+    			
 	    		
 	    		{% if territoire.territoire %}	
 	    		<div class="list-group-item">
