--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -133,6 +133,7 @@
 						<li><a href="{{ path('user.register') }}">S'enregistrer</a></li>
 					{%  endif %}
 					<li><a href="{{ path('legal') }}">Mentions légales</a></li>
+					<li><a href="{{ path('dev') }}">Développement</a></li>
 				</ul>
 			</li>	
 						
