Page de présentation des backgrounds joueurs. Correction transfert de personnage et correction ajout d'un utilisateur dans un groupe.

--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -92,7 +92,11 @@
     						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
 	    					Attention, ce groupe n'a pas de scénariste.
     					{% else %}
-    						{{ groupe.scenariste.username }}
+    						{{ groupe.scenariste.username }} {{ groupe.scenariste.email }}
+    						{% if groupe.scenariste.etatCivil %}
+    							(&nbsp;{{ groupe.scenariste.etatCivil.nom }} {{ groupe.scenariste.etatCivil.prenom }}&nbsp;)
+    						{% endif %}
+    							
     					{% endif %}
     				</p>
     				<p class="list-group-item-text">
