ajouter des constructions aux territoires. Corrections de bugs.

--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -307,6 +307,7 @@
 						<a class="btn btn-primary" role="button" href="{{ path('groupe.print.materiel.groupe', {'groupe' : groupe.id}) }}">Matériel necessaire (groupe)</a>
 						<a class="btn btn-primary" role="button" href="{{ path('groupe.print.materiel', {'groupe' : groupe.id}) }}">Matériel necessaire (personnages)</a>
 						<a class="btn btn-primary" role="button" href="{{ path('groupe.print.perso', {'groupe' : groupe.id}) }}">Fiche de perso</a>
+						<a class="btn btn-primary" role="button" href="{{ path('groupe.print.background', {'groupe' : groupe.id}) }}">Background</a>
 					</div>
 				</div>
 			</div>
