--- a/src/LarpManager/Views/admin/diplomatie.twig
+++ b/src/LarpManager/Views/admin/diplomatie.twig
@@ -40,7 +40,7 @@
 {% endblock style %}
 
 {% block content %}
-
+<a href="{{ path('groupe.diplomatie.print') }}">Impression</a>
 <table class="diplo">
 	<thead>
 		<tr>
