--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -82,6 +82,11 @@
 		    				</p>
 		    			{% endfor %}
 	    			{% endfor %}
+	    			
+	    			<h6 class="list-group-item-heading">Quête commerciale</h6>
+	    			<p class="list-group-item-text">
+		    			<a href="{{ path('groupe.quete',{'groupe': groupe.id}) }}">Générer une quête commerciale</a>
+		    		</p>
 	    		</div>
 
 	    			
