--- a/src/LarpManager/Views/admin/groupe/printMaterielGroupe.twig
+++ b/src/LarpManager/Views/admin/groupe/printMaterielGroupe.twig
@@ -12,5 +12,54 @@
 		<li>#{{ personnage.id }} {{ personnage.nom }} {{ personnage.surnom }}</li>
 {% endfor %}
 </ul> 
+
+<strong>Ressources</strong>
+<ul>
+{% if groupe.hasRessource %}
+	{% for territoire in groupe.territoires %}
+		{% for ressource in territoire.exportations %}
+	    	<li><strong>{{ ressource.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+		{% endfor %}
+	{% endfor %}
+{% else %}
+	<li>Aucun</li>
+{% endif %}
+</ul>
+
+<strong>Richesse</strong>
+<ul>
+{% if groupe.hasRichesse %}
+	{% for territoire in groupe.territoires %}
+		<li><strong>{{ territoire.tresor|default(0) }} PA</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+	{% endfor %}
+{% else %}
+	<li>Aucun</li>
+{% endif %}
+</ul>
+
+<strong>Ingrédients</strong>
+<ul>
+{% if groupe.hasIngredient %}
+	{% for territoire in groupe.territoires %}
+		{% for ingredient in territoire.ingredients %}
+			<li><strong>{{ ingredient.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+	    {% endfor %}
+	{% endfor %}
+{% else %}
+	<li>Aucune</li>
+{% endif %}
+</ul>
+
+<strong>Matériel</strong>
+<p>{{ groupe.materielRaw }}</p>
+
+<strong>Jeu maritime</strong>
+{% if groupe.jeuMaritime %}
+Participe au jeu maritime
+{% else %}
+Ne participe pas au jeu maritime
+{% endif %}
+
+
 </body>
 </html>
