--- a/src/LarpManager/Views/admin/religion/perso.twig
+++ b/src/LarpManager/Views/admin/religion/perso.twig
@@ -25,7 +25,12 @@
 
 			<div class="list-group">
 				{% for personnageReligion in religion.personnagesReligions %}
-					<a class="list-group-item" href="{{ path('personnage.admin.detail',{'personnage':personnageReligion.personnage.id}) }}">#{{ personnageReligion.personnage.id }} - {{ personnageReligion.personnage.nom }}&nbsp;{{ personnageReligion.personnage.surnom }} - {{ personnageReligion.personnage.classeName }} - <strong>{{ personnageReligion.religionLevel.label }}</strong></a>
+					<div class="list-group-item">
+					<a href="{{ path('personnage.admin.detail',{'personnage':personnageReligion.personnage.id}) }}">#{{ personnageReligion.personnage.id }} - {{ personnageReligion.personnage.nom }}&nbsp;{{ personnageReligion.personnage.surnom }} - {{ personnageReligion.personnage.classeName }} - <strong>{{ personnageReligion.religionLevel.label }}</strong></a>
+					{% if personnageReligion.personnage.user %}
+						{{ personnageReligion.personnage.user.email }}
+					{% endif %}
+					</div>
 				{% endfor %}
 			</div>
 		</div>
