--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -43,8 +43,22 @@
    	    		</div>
 						
 
+				<div class="list-group-item">
+	    			<h4 class="list-group-item-heading">Pays</h4>
+	    			<p class="list-group-item-text">
+	    				{% if groupe.territoire %}
+	    					<a href="{{ path('territoire.admin.detail', {'territoire': groupe.territoire.id}) }}">{{ groupe.territoire.nom }}</a>
+	    				{% else %}
+	    					Ce groupe n'est pas rataché à un pays.
+	    				{% endif %}
+	    			</p>
+	    			<p class="list-group-item-text">
+	    				<a href="{{ path('groupe.admin.pays.update', {'groupe': groupe.id}) }}">Modifier le pays</a>
+	    			</p>
+	    		</div>
+	    			
 	    		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Territoire(s)</h4>
+	    			<h4 class="list-group-item-heading">Territoire(s) contrôlé(s)</h4>
 	    			
 	    			{% for territoire in groupe.territoires %}
 		    			<p class="list-group-item-text">
