--- a/src/LarpManager/Views/public/territoire/detail.twig
+++ b/src/LarpManager/Views/public/territoire/detail.twig
@@ -1,15 +1,16 @@
 {% extends "layout.twig" %}
 
-{% block title %}Territoire{% endblock title %}
+{% block title %}{{ territoire.nom }}{% endblock title %}
 
 {% block content %}
+
 
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-8">
 		
 			<div class="well well-sm bs-component">
-			<a href="{{ path('territoire.admin.list') }}">Retour à la liste des territoires</a>
+			
 				<div class="row">
 					<div class="col-md-8">
 						<h4>
@@ -21,55 +22,55 @@
 						{% if territoire.blason %}
 							<img width="160" height="200" src="{{ path('blason.get', {'blason' : territoire.blason }) }}" /><br />
 						{% endif %}
-						<a href="{{ path('territoire.admin.update.blason', {'territoire': territoire.id}) }}">Ajouter ou modifier le blason</a>
 					</div>
 				</div>
 			</div>
-							    			
-  			<div class="list-group">
+			
+			<div class="list-group">
   			
   				<div class="list-group-item">
-			    	<h4 class="list-group-item-heading">Jeu stratégique</h4>
+  					<div class="header">
+			    		<h5>Jeu stratégique</h5>
+			    	</div>
 			    	<ul>
-	    			<li>Resistance de base : {{ territoire.resistance|default("non définie") }}</li>
+	    			<li>Resistance de base {{ territoire.resistance|default("non définie") }}</li>
 	    			<li>Defense du territoire : {{ territoire.defense }} (prend en compte les constructions)</li>
 	    			<li>Richesse {{ territoire.tresor|default("non définie") }}</li>
 	    			</ul>
-	    			<a href="{{ path('territoire.admin.updateStrategie', {'territoire': territoire.id}) }}">Modifier</a>
 	    		</div>
 	    		
 	    		<div class="list-group-item">
-			    	<h4 class="list-group-item-heading">Constructions</h4>
+	    			<div class="header">
+			    		<h5>Constructions</h5>
+			    	</div>
 			    	<ul>
 			    		{% for construction in territoire.constructions %}
-			    			<li>{{ construction.fullLabel }} / <a href="{{ path('territoire.construction.remove', {'territoire': territoire.id, 'construction': construction.id}) }}">Retirer</a></li>
+			    			<li>{{ construction.fullLabel }}</li>
 			    		{% endfor %}
 			    	</ul>
-			    	<a href="{{ path('territoire.construction.add', {'territoire': territoire.id}) }}">Ajouter une construction</a>
 			    </div>
-		    		
-		    	<div class="list-group-item">
-			    	<h4 class="list-group-item-heading">Description</h4>
+			    
+			    
+				<div class="list-group-item">
+					<div class="header">
+			    		<h5>Description</h5>
+			    	</div>
 	    			<p class="list-group-item-text">
-	    			{% if not territoire.description %}
-    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-    				Attention, ce territoire n'a pas de description.
-    				{% else %}
+	    			{% if territoire.description %}
     					{{ territoire.description|markdown }}
     				{% endif %}
     				</p>
     				<p class="list-group-item-text">
-	    			{% if not territoire.descriptionSecrete %}
-    				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-    				Attention, ce territoire n'a pas de description connue des seuls habitants.
-    				{% else %}
+	    			{% if territoire.descriptionSecrete %}
     					{{ territoire.descriptionSecrete|markdown }}
     				{% endif %}
     				</p>
 	    		</div>
 	    		
 	    		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Informations politiques</h4>
+	    			<div class="header">
+	    				<h5>Informations politiques</h5>
+	    			</div>
 	    			<p class="list-group-item-text">
 	    				<ul>
 	    					<li><strong>Capitale : </strong>{{ territoire.capitale|default('Aucune') }}</li>
@@ -80,7 +81,9 @@
 	    		</div>
 	    		
 	    		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Information d'interprétation</h4>
+	    			<div class="header">
+	    				<h5>Information d'interprétation</h5>
+	    			</div>
 	    			<p class="list-group-item-text">
 	    				<ul>
 	    					<li><strong>Type racial : </strong>{{ territoire.typeRacial|default('Non défini') }}</li>
@@ -95,7 +98,9 @@
 	    		</div>
 	    		
 	    		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Autres informations</h4>
+	    			<div class="header">
+	    				<h5>Autres informations</h5>
+	    			</div>
 	    			<p class="list-group-item-text">
 	    				<ul>
 	    					<li><strong>Population : </strong>{{ territoire.population|default('Inconnue') }}</li>
@@ -108,7 +113,9 @@
 	    		</div>
 	    			    		
 	     		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Cultes</h4>
+	     			<div class="header">
+	    				<h5>Cultes</h5>
+	    			</div>
     				<p class="list-group-item-text">
     					<ul>
     						<li><strong>Religion dominante : </strong>{{ territoire.religion }}</li>
@@ -118,13 +125,14 @@
     			</div>
 	    		
 	    		<div class="list-group-item">
-	    			<h4 class="list-group-item-heading">Economie</h4>
+	    			<div class="header">
+	    				<h5>Economie</h5>
+	    			</div>	
     				<p class="list-group-item-text">
     					<ul>
     						<li><strong>Importations : </strong>{% if territoire.importations|length > 0 %}{{ territoire.importations|join(', ') }}{% else %}Rien{% endif %}</li>
     						<li><strong>Exportations : </strong>{% if territoire.exportations|length > 0 %}{{ territoire.exportations|join(', ') }}{% else %}Rien{% endif %}</li>
     						<li><strong>Ingrédients : </strong>{% if territoire.ingredients|length > 0 %}{{ territoire.ingredients|join(', ') }}{% else %}Rien{% endif %}</li>
-    						<li><a href="{{ path('territoire.ingredients.update', {'territoire': territoire.id}) }}">Modifier la liste des ingredients</a></li>
     					</ul>
     				</p>
     			</div>
@@ -133,40 +141,32 @@
 	    		
 	    		{% if territoire.territoire %}	
 	    		<div class="list-group-item">
-		    		<h4 class="list-group-item-heading">Ce territoire dépend de</h4>
+	    			<div class="header">
+		    			<h5>Ce territoire dépend de</h5>
+		    		</div>
     				<p class="list-group-item-text">
-    					<a href="{{ path('territoire.admin.detail',{'territoire': territoire.territoire.id}) }}">{{ territoire.territoire.nom }}</a>
+    					<a href="{{ path('territoire.detail',{'territoire': territoire.territoire.id}) }}">{{ territoire.territoire.nom }}</a>
     				</p>
     			</div>
     			{% endif %}
     			
 	    		<div class="list-group-item">
-		    		<h4 class="list-group-item-heading">Liste des territoires rattachés à ce territoire ({{ territoire.territoires|length }} territoires)</h4>
+	    			<div class="header">
+		    			<h5>Liste des territoires rattachés à ce territoire ({{ territoire.territoires|length }} territoires)</h5>
+		    		</div>
     				<p class="list-group-item-text">
 						<ul>
 						{% for territoire in territoire.territoires %}
-							<li><a href="{{ path('territoire.admin.detail',{'territoire': territoire.id}) }}">{{ territoire.nomTree }}</a></li>
+							<li><a href="{{ path('territoire.detail',{'territoire': territoire.id}) }}">{{ territoire.nomTree }}</a></li>
 						{% endfor %}
 						</ul>
 					</p>
 				</div>
-				
-				<div class="list-group-item">
-  					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('territoire.admin.update', {'territoire' : territoire.id}) }}">Modifier</a>
-  						<a  class="btn btn-danger" role="button" href="{{ path('territoire.admin.delete', {'territoire' : territoire.id}) }}">Supprimer</a>
-  						
-  						{% if territoire.topic %}
-  							<a class="btn btn-default" href="{{ path('territoire.admin.topic.delete', {'territoire':territoire.id}) }}">Supprimer le topic</a>
-  						{% else %}
-							<a class="btn btn-default" href="{{ path('territoire.admin.topic.add', {'territoire':territoire.id}) }}">Ajouter un topic</a>  											
-  						{% endif %}
-  						
-					</div>
-  				</div>
+	    		
 			</div>
 		</div>
 	</div>
 </div>
 
-{% endblock %}
+
+{% endblock content %}
