--- a/src/LarpManager/Views/admin/territoire/list.twig
+++ b/src/LarpManager/Views/admin/territoire/list.twig
@@ -14,6 +14,14 @@
 				</h4>
 			</div>
 			
+			<div>
+				<a href="{{ path('territoire.admin.print') }}"><button  type="button" class="btn btn-default">Imprimer</button></a>
+				<a href="{{ path('groupe.quetes') }}"><button  type="button" class="btn btn-default">Quêtes</button></a>
+				<a href="{{ path('groupe.quetes',{'csv': true}) }}"><button  type="button" class="btn btn-default">Quêtes (csv)</button></a>
+				<a href="{{ path('territoire.admin.quete') }}"><button  type="button" class="btn btn-default">Quête individuelle</button></a>
+				<a href="{{ path('territoire.admin.noble') }}"><button  type="button" class="btn btn-default">Nobles</button></a>
+			</div>
+			
 			<ul class="list-group">
 					<a href="{{ path('territoire.admin.add') }}" class="list-group-item active">
 						<span class="badge"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></span>
