Correction score de pugilat

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -40,6 +40,7 @@
 						<li><a href="{{ path('admin.rappels') }}">rappels</a></li>
 						<li><a href="{{ path('rules.admin') }}">Règles</a></li>
 						<li><a href="{{ path('personnage.admin.fiche') }}">Fiches</a></li>
+						<li><a href="{{ path('personnage.pugilat') }}">Pugilat</a></li>
 					</ul>
 				</li>
 			{% endif %}
