--- a/src/LarpManager/Views/admin/document/index.twig
+++ b/src/LarpManager/Views/admin/document/index.twig
@@ -24,23 +24,31 @@
 			<thead>
 				<tr>
 					<th>Titre</th>
+					<th>Impression</th>
 					<th>Description</th>
 					<th>Langues</th>
 					<th>Lieux</th>
 					<th>Groupes</th>
 					<th>Personnages</th>
+					<th>Créateur</th>
+					<th>Date de création</th>
+					<th>Date de mise à jour</th>
 					<th />
 				</tr>
 			</thead>
 			<tbody>
 				{% for document in documents %}
 				<tr>
-					<td>#{{ document.code }} -- {{ document.titre }}</td>
+					<td>{{ document.code }} -- {{ document.titre }}</td>
+					<td>{% if document.impression %}Imprimé{% else %}Non imprimé{% endif %}</td>
 					<td>{{ document.description|markdown }}</td>
 					<td>{% if document.langues|length > 0 %}Langue(s) : {{ document.langues|join(', ') }}{% else %}Aucune langue définie{% endif %}</td>
 					<td>{% if document.lieus|length > 0 %}Entreposé dans : {{ document.lieus|join(', ') }}{% else %}Non défini{% endif %}</td>
 					<td>{% if document.groupes|length > 0 %}Possédé par les groupes : {{ document.groupes|join(', ') }}{% else %}Non défini{% endif %}</td>
 					<td>{% if document.personnages|length > 0 %}Possédé par les personnages : {{ document.personnages|join(', ') }}{% else %}Non défini{% endif %}</td>
+					<td>{{ document.user.userName }}</td>
+					<td>{{ document.creationDate|date('Y-m-d') }}</td>
+					<td>{{ document.updateDate|date('Y-m-d') }}</td>
 					<td>
 						<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
 							<div class="btn-group" role="group" aria-label="...">
