--- a/web/css/style.css
+++ b/web/css/style.css
@@ -115,6 +115,11 @@ ul.forum li
 	margin-left: 5px;
 }
 
+.form-group {
+    border: 1px dashed #aaa;
+    padding: 10px;
+}
+
 /** 
  *	Icones 
  */
