Gestion des lieux et des documents liés. Corrections de bugs

--- a/src/LarpManager/Views/admin/document/index.twig
+++ b/src/LarpManager/Views/admin/document/index.twig
@@ -42,10 +42,10 @@
 					<td>{{ document.code }} -- {{ document.titre }}</td>
 					<td>{% if document.impression %}Imprimé{% else %}Non imprimé{% endif %}</td>
 					<td>{{ document.description|markdown }}</td>
-					<td>{% if document.langues|length > 0 %}Langue(s) : {{ document.langues|join(', ') }}{% else %}Aucune langue définie{% endif %}</td>
-					<td>{% if document.lieus|length > 0 %}Entreposé dans : {{ document.lieus|join(', ') }}{% else %}Non défini{% endif %}</td>
-					<td>{% if document.groupes|length > 0 %}Possédé par les groupes : {{ document.groupes|join(', ') }}{% else %}Non défini{% endif %}</td>
-					<td>{% if document.personnages|length > 0 %}Possédé par les personnages : {{ document.personnages|join(', ') }}{% else %}Non défini{% endif %}</td>
+					<td>{% if document.langues|length > 0 %}{{ document.langues|join(', ') }}{% else %}Aucune langue définie{% endif %}</td>
+					<td>{% if document.lieus|length > 0 %}{{ document.lieus|join(', ') }}{% else %}Non défini{% endif %}</td>
+					<td>{% if document.groupes|length > 0 %}{{ document.groupes|join(', ') }}{% else %}Non défini{% endif %}</td>
+					<td>{% if document.personnages|length > 0 %}{{ document.personnages|join(', ') }}{% else %}Non défini{% endif %}</td>
 					<td>{{ document.user.userName }}</td>
 					<td>{{ document.creationDate|date('Y-m-d') }}</td>
 					<td>{{ document.updateDate|date('Y-m-d') }}</td>
