Refactorisation, suppression de Fpdf, gestion admin des billets, gestion admin des restrictions alimentaires

--- a/src/LarpManager/Views/admin/billet/list.twig
+++ b/src/LarpManager/Views/admin/billet/list.twig
@@ -34,7 +34,7 @@
 					<td>{{ billet.label }}</td>
 					<td>{{ billet.description|markdown }}</td>
 					<td>{{ billet.gn }}</td>
-					<td>{{ billet.users|length > 0 }}</td>
+					<td>{{ billet.users|length }}</td>
 					<td>
 						<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
 							<div class="btn-group" role="group" aria-label="...">
