--- a/src/LarpManager/Views/admin/lieu/add.twig
+++ b/src/LarpManager/Views/admin/lieu/add.twig
@@ -10,7 +10,7 @@
 		<li class="active">Ajout d'un lieu</li>
 	</ol>
 	
-	<div class="well bs-component">
+	<div class="well well-sm">
 		<form action="{{ path('lieu.add') }}" method="POST" {{ form_enctype(form) }}  novalidate>
 			<fieldset>
 				<legend>Ajout d'un lieu</legend>
