--- a/src/LarpManager/Views/homepage/fragment/administration.twig
+++ b/src/LarpManager/Views/homepage/fragment/administration.twig
@@ -6,4 +6,7 @@
 	<li class="list-group-item"><a href="{{ path('user.restriction') }}">Mes restrictions alimentaires</a></li>
 	<li class="list-group-item"><a href="{{ path('user.fedegn') }}">Assurance Fédégn</a></li>
 	<li class="list-group-item"><a href="{{ path('user.billetterie') }}">Billetterie</a></li>
+	{% for billet in user.billets %}
+		<li class="list-group-item">{{ billet.gn.label }} -- {{ billet.label }}</li>
+	{% endfor %}
 </ul>
