--- a/src/LarpManager/Views/public/user/fedegn.twig
+++ b/src/LarpManager/Views/public/user/fedegn.twig
@@ -14,10 +14,7 @@
 			<h5>Assurance FédéGN</h5>
 		</div>
 		<blockquote>
-			Prendre une assurance n'est pas obligatoire, néanmoins nous vous conseillons d'opter pour la carte GN ou la carte GN+ de la fédéGN afin d'être couvert en cas de soucis.
-			Cette page utilise l'API de la fédéGN afin de vous indiquer la validité de votre carte GN.
-			En l'absence de carte GN, l'association Eve-oniris prendra en charge votre assurance, mais cela a un coût que nous aimerions éviter dans la mesure du possible.
-			L'association Eve-oniris c'est engagé auprès de la fédéGN à ne pas divulguer vos informations personnelles. Ces données ne sont pas stocké et ne font pas l'objet d'un traitement informatique.  
+			Prendre une assurance n'est pas obligatoire, néanmoins nous vous conseillons d'opter pour la carte GN ou la carte GN+ de la fédéGN afin d'être couvert en cas de soucis. Cette page utilise l'API de la fédéGN afin de vous indiquer la validité de votre carte GN. En l'absence de carte GN, l'association Eve-Oniris prendra en charge votre assurance, mais cela a un coût que nous aimerions éviter dans la mesure du possible. L'association Eve-oniris s'est engagée auprès de la fédéGN à ne pas divulguer vos informations personnelles. Ces données ne sont pas stockées et ne font pas l'objet d'un traitement informatique.  
 		</blockquote>
 		{% if etatCivil %}
 			<div class="text-center">
