Gestion des lieux de restauration

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -40,7 +40,7 @@
 						<li><a href="{{ path('billet.list') }}">Liste des billets</a></li>
 						<li><a href="{{ path('user.admin.list') }}">Liste des utilisateurs</a></li>
 						<li><a href="{{ path('restriction.list') }}">Restrictions alimentaires</a></li>
-						<li><a href="{{ path('admin.restauration') }}">Restauration</a></li>
+						<li><a href="{{ path('restauration.list') }}">Lieux de restauration</a></li>
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('right.admin.list') }}">Liste des droits</a></li>
