--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -35,10 +35,10 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="{{ path('annonce.list') }}">Liste des annonces</a></li>
-						<li><a href="{{ path('gn.list') }}">Liste des grandeurs natures</a></li>
-						<li><a href="{{ path('billet.list') }}">Liste des billets</a></li>
-						<li><a href="{{ path('user.admin.list') }}">Liste des utilisateurs</a></li>
+						<li><a href="{{ path('annonce.list') }}">Annonces</a></li>
+						<li><a href="{{ path('gn.list') }}">Grandeurs natures</a></li>
+						<li><a href="{{ path('billet.list') }}">Billets</a></li>
+						<li><a href="{{ path('user.admin.list') }}">Utilisateurs</a></li>
 						<li><a href="{{ path('restriction.list') }}">Restrictions alimentaires</a></li>
 						<li><a href="{{ path('restauration.list') }}">Lieux de restauration</a></li>
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
